refactor: get(0)을 getFirst()로 변경